--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
             position: relative;
             margin-bottom: 12px;
             border-radius: 8px;
+            box-shadow: 0 2px 4px 0 rgb(0 0 0 / 4%);
         }
         .dadosGeraisConteudo{
             background-color: white;
@@ -746,7 +747,7 @@
     <p class="pH4"><a class="lattes" href="http://lattes.cnpq.br/4993291222018594" target="_blank">Alan da Cruz Assis da Silva</a></p>
     <br>
     <section class="siteInfo" style="display: flex; flex-direction: row; justify-content: space-between; padding-right: 2%;">
-        <p class="lastUpdated" style="color: gray;">Atualizado por último em 25/02/2023</p><p class="lastUpdated" style="color: #333333;"><a style="color: gray;" class="simpleLink" href="https://alancruzassis.github.io/vgp/termos.pdf">Termos de uso</a></p>
+        <p class="lastUpdated" style="color: gray;">Atualizado por último em 07/03/2023</p><p class="lastUpdated" style="color: #333333;"><a style="color: gray;" class="simpleLink" href="https://alancruzassis.github.io/vgp/termos.pdf">Termos de uso</a></p>
     </section>
 </div>
 
