--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             box-shadow: 0px 1px 2px 0px rgba(142, 142, 142, 0.75);
             margin-bottom: 32px;
             position: relative;
+	    box-sizing: border-box;
         }
 
         h1{
