--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             box-shadow: 0px 1px 2px 0px rgba(142, 142, 142, 0.75);
             margin-bottom: 32px;
             position: relative;
-	    box-sizing: border-box;
+            box-sizing: border-box;
         }
 
         h1{
@@ -659,8 +659,13 @@
         
     </div><!--dadosGeraisConteudo-->
     </div><!--dadosGerais-->
+     <div style="font-size: 13px; margin-left: 4%">
+        <a href="https://alancruzassis.github.io/grandequeimado/classificacao">Descubra se o paciente é Grande Queimado</a>
+        <br><br>
+    </div>
     </form>
 
+   
         
     <div>
    
@@ -748,7 +753,7 @@
     <p class="pH4"><a class="lattes" href="http://lattes.cnpq.br/4993291222018594" target="_blank">Alan da Cruz Assis da Silva</a></p>
     <br>
     <section class="siteInfo" style="display: flex; flex-direction: row; justify-content: space-between; padding-right: 2%;">
-        <p class="lastUpdated" style="color: gray;">Atualizado por último em 07/03/2023</p><p class="lastUpdated" style="color: #333333;"><a style="color: gray;" class="simpleLink" href="https://alancruzassis.github.io/vgp/termos.pdf">Termos de uso</a></p>
+        <p class="lastUpdated" style="color: gray;">Atualizado por último em 08/04/2023</p><p class="lastUpdated" style="color: #333333;"><a style="color: gray;" class="simpleLink" href="https://alancruzassis.github.io/vgp/termos.pdf">Termos de uso</a></p>
     </section>
 </div>
 
